# myFirstAgent

./: .env.example  .gitignore  README.md  pyproject.toml  react_flow.md
01_simple_chat/: llm.py  main.py
02_react_agent/: main.py  react_agent.py  tools.py
03_function_calling/: main.py  tools.py
04_rag/: knowledge_base.txt  main.py  rag_agent.py  vector_store.py
common/: __init__.py  llm.py
